Development history / change log, please read from bottom up

Version 3.4.9 - xx yyy 2021
Generic changes/fixes
	* remove property enumeration value="tolerate_sign_change"
	* add log output detecting possible corrupt file creating history
	* codesign Mac OS X - add time stamp and identifier to dmg
	* Schema update (V43) to reflect removed property as well as updated device XML
	
Device specific changes/fixes
	* HoTTAdapter* - remove dependency to property using North/South hemisphere, as well as East/West of meridian
	* HoTTAdapter* - rename variable GPS values in XML to propagate to history analysis
	* HoTTAdapter* - correct offset MSL altitude if contained in GPS in *.log
	* HoTTAdapter* - correct factor home direction, enable translation for HomeDirection
	* HoTTAdapter* - refactor method updating GPS type dependent records
	* HoTTAdapter* - update GPS type dependent records while loading from OSD
	* HoTTAdapter* - harmonize temperature offset to fix scale sync problem in HoTTAdapter2
	* HoTTAdapter2 - fix GPS data import single sensor
	* IGCAdapter - add missing unit in device XML
	* GPS-Logger2/3 - additional measurements added with 1.26 (NMEA Import)
	* GPS-Logger* - update configuration according 1.26

Version 3.4.8 - 24 Apr 2021
Generic changes/fixes
	* enable record based scale sync property updates (outside device XML)
	
Device specific changes/fixes
	* HoTTAdapter* - fix scale synchronization, formatting, unit and factor to support different GPS data source
	* HoTTAdapter* - change SM GPS-Logger names from gyro to acceleration
	* HoTTAdapter* - change GPS time and year to more readable format
	* HoTTAdapter2 - fix parsing altitude,climb values while EAM is configured as primary
	* HoTTAdapter2 - fix missing GAM, EAM, ESC parsing while no known GPS is connected
	* HoTTAdapter2 - enable simple GPS type detection while reading through 19200 Baud protocol
	* Triangoli - add initial support

Version 3.4.7 - 27 Mar 2021
Generic changes/fixes