@@ -6,6 +6,7 @@ Generic changes/fixes
 	* add log output detecting possible corrupt file creating history
 	* codesign Mac OS X - add time stamp and identifier to dmg
 	* Schema update (V43) to reflect removed property as well as updated device XML
+	* add IDevice method to correct channel if required (simplified OSD from GDE Android)
 	
 Device specific changes/fixes
 	* HoTTAdapter* - remove dependency to property using North/South hemisphere, as well as East/West of meridian
